--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
           'https://support.dmeng.net/upgrade-your-browser.html?referrer=' +
           encodeURIComponent(window.location.href);
     </script>
+    <!-- umami统计 -->
+    <script defer src="https://umami.291055.xyz/script.js" data-website-id="f39b49f3-b620-4cf0-987f-f6348cf07ac5"></script>
   </head>
 
   <body>
+    <!-- umami统计 -->
+    <script defer src="https://umami.291055.xyz/script.js" data-website-id="f39b49f3-b620-4cf0-987f-f6348cf07ac5"></script>
     <!-- 主体内容 -->
     <div id="app"></div>
     <!-- noscript -->
